# SeydappAI_ModelTrainer

./: .gitignore  =3.8.0  CHANGELOG.md  KULLANIM_KLAVUZU.md  README.md  debug_version.py  main.py  pyproject.toml  requirements.txt
configs/: app_config.yaml  self_learning_config.yaml  training_profiles.yaml
datasets/conversations/: autonomous_research.jsonl  force_training.jsonl  micro_training.jsonl  turkish_coding.jsonl  turkish_coding_conversation.jsonl  user_topics.jsonl
micro_5min_test/checkpoint-1/: trainer_state.json
micro_5min_test/checkpoint-2/: tokenizer.json  trainer_state.json
micro_test_results/checkpoint-1/: adapter_config.json  tokenizer.json  trainer_state.json
micro_trained_model/: adapter_config.json
model_output/checkpoint-1/: README.md  tokenizer.json  trainer_state.json
model_output/checkpoint-2/: trainer_state.json
optimized_lora_output/checkpoint-1/: trainer_state.json
optimized_lora_output/checkpoint-2/: adapter_config.json  trainer_state.json
src/core/: app_manager.py  config.py
src/data/: dataset_manager.py  preprocessor.py
src/knowledge/: __init__.py  knowledge_graph.py  knowledge_processor.py  rag_retriever.py  self_learning_system.py
src/learning/: data_validator.py  incremental_trainer.py  learning_scheduler.py
src/models/: __init__.py  inference_pipeline.py  model_loader.py
src/models/core/: __init__.py  device_manager.py  gpu_detector.py
src/models/loading/: __init__.py  base_loader.py  lora_loader.py  (+1 more)
src/research/: content_filter.py  enhanced_web_search.py  intelligent_web_scraper.py  knowledge_extractor.py  real_web_scraper.py  real_web_search.py  simple_web_search.py  web_scraper.py  web_search_utils.py
src/training/: autonomous_trainer.py  micro_lora_training.py  optimized_rtx3060_training.py  rtx3060_training.py  starcoder2_trainer.py  start_training.py
src/ui/: ai_chat_interface.py  model_egit_ui.py  responsive_sidebar.py  training_interface.py  training_interface_v2.py  ui_factory.py  ultra_modern_training_ui.py
src/utils/: async_logger.py  environment.py  gpu_monitor.py  logger.py  training_state.py
storage/data/: knowledge_graph.json  last_training.json  training_schedule.json
tests/: check_system.py
trained_models/pytorch_optimizasyonu/: adapter_config.json
(+35 files in other folders)
